...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carousel_container"
            app:startIconDrawable="@drawable/outline_email_24">

            <com.myapplication.valdistoryapp.ui.components.CustomEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:errorMessage="@string/email_error_msg"
                app:required="true"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.myapplication.valdistoryapp.ui.components.CustomEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                app:minLength="8"
                app:minLengthErrorMessage="@string/password_error_msg"
                app:required="true"
                app:requiredErrorMessage="@string/password_required_error_msg" />

        </com.myapplication.valdistoryapp.ui.components.CustomTextInputLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:enabled="false"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
...
